--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation Styles here
+.nav {
+  
+  .container{
+    display: flex;
+    margin: 30px 0 0 0;
+    justify-content: space-between;
+
+    nav a {
+      font-size: 20px;
+      margin: 0 30px;
+      color: black;
+      font-family: sans-serif;
+      text-decoration: none;
+    }
+  padding-bottom: 20px;
+  border-bottom: dashed 1px;
+  }
+  img {
+    width: 100%;
+    align-content: flex-start;
+  }
+}
