--- a/less/index.less
+++ b/less/index.less
@@ -1,8 +1,14 @@
-// Follow the order in the readme
-@import "variables";
-@import "mixins";
-@import "reset";
-@import "global";
-@import "navigation";
-@import "footer";
-@import "home-page";
+// Variables and Mixins
+@import 'variables.less';
+@import 'mixins.less';
+
+// Reset and Global Styles
+@import 'reset.less';
+@import 'global.less';
+
+// Reusable components
+@import 'navigation.less';
+@import 'footer.less';
+
+// Page Specific
+@import 'home-page.less';
