--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,23 +1,44 @@
-// Navigation Styles here
-.nav {
-  
-  .container{
+.main-navigation {
+  width: 100%;
+  height: 90px;
+  background: @main-bg;
+  border-bottom: 2px dashed @navigation-border;
+  position: fixed;
+
+  .nav-container {
+    height: 100%;
     display: flex;
-    margin: 30px 0 0 0;
+    align-items: center;
     justify-content: space-between;
 
-    nav a {
-      font-size: 20px;
-      margin: 0 30px;
-      color: black;
-      font-family: sans-serif;
-      text-decoration: none;
+    @media @mobile {
+      flex-wrap: wrap;
+      justify-content: center;
+      padding-top: 10px;
     }
-  padding-bottom: 20px;
-  border-bottom: dashed 1px;
-  }
-  img {
-    width: 100%;
-    align-content: flex-start;
+
+    .logo-heading {
+      @media @mobile {
+        font-size: 3rem;
+      }
+    }
+
+    .nav {
+      width: 350px;
+      display: flex;
+      justify-content: space-evenly;
+
+      @media @mobile {
+        width: 100%;
+        justify-content: space-around;
+      }
+      
+      
+      a {
+        font-size: 1.6rem;
+        color: @font-color;
+        text-decoration: none;
+      }
+    }
   }
 }
